[package]
name = "rcon"
description = "RCon client library"
license = "MIT"
repository = "https://github.com/conqp/rcon-rs"
categories = ["api-bindings", "command-line-utilities"]
keywords = ["rcon", "client"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"], optional = true }
crc = "3.0.1"
env_logger = "0.11.2"
log = "0.4.21"
rand = "0.9.0-alpha.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time"] }
udp-stream = "0.0.11"

[features]
cli = ["dep:clap"]

[[bin]]
name = "rconclt"
required-features = ["cli"]
