[package]
name = "rcon"
description = "RCon client library"
license = "MIT"
repository = "https://github.com/conqp/rcon-rs"
categories = ["api-bindings", "command-line-utilities"]
keywords = ["rcon", "client"]
version = "0.2.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6", optional = true }
crc = { version = "3.2", optional = true }
log = { version = "0.4", optional = true }
num-derive = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
rand = { version = "0.9.0-alpha.2", optional = true }
tokio = { version = "1.40", optional = true }
uuid = { version = "1.11", optional = true }

[dev-dependencies]
clap = { version = "4.5" }
env_logger = { version = "0.11" }
rpassword = { version = "7.3" }

[features]
battleye = ["crc", "log", "tokio/rt", "tokio/time", "tokio/sync"]
source = ["bitflags", "log", "num-derive", "num-traits", "rand", "tokio/io-util", "tokio/net"]
cli = ["clap/derive", "tokio/rt-multi-thread", "tokio/macros"]
dayz = ["battleye", "uuid"]
minecraft = ["source"]
minecraft-java-edition = ["minecraft"]
minecraft-bedrock-edition = ["minecraft"]
minecraft-education-edition = ["minecraft-bedrock-edition"]

[[example]]
name = "rconclt"
required-features = ["battleye", "cli", "source"]

[[example]]
name = "dayz_rcon"
required-features = ["cli", "dayz"]

[[example]]
name = "minecraft_java_edition"
required-features = ["cli", ",minecraft-java-edition"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
keyword_idents = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
for_loops_over_fallibles = "warn"
redundant_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -90 }
nursery = { level = "warn", priority = -95 }
perf = { level = "warn", priority = -95 }
suspicious = { level = "warn", priority = -95 }
complexity = { level = "warn", priority = -100 }
cargo = { level = "warn", priority = -95 }
all = { level = "warn", priority = -98 }

incompatible_msrv = "warn"
as_ptr_cast_mut = "warn"
clear_with_drain = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
deref_by_slicing = "warn"
empty_enum_variants_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
mem_forget = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
panic_in_result_fn = "warn"
path_buf_push_overwrite = "warn"
unwrap_in_result = "warn"
verbose_file_reads = "warn"
useless_let_if_seq = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
string_add = "warn"
string_slice = "warn"
string_to_string = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
unnecessary_self_imports = "warn"
