[package]
name = "dayz-rcon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rcon = { path = "../rcon", features = ["dayz"] }
rpassword = "7"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
