[package]
name = "rcon"
description = "RCon client library"
license = "MIT"
repository = "https://github.com/conqp/rcon-rs"
categories = ["api-bindings", "command-line-utilities"]
keywords = ["rcon", "client"]
version = "0.3.0"
edition = "2024"

[dependencies]
bitflags = { version = "2", optional = true }
crc = { version = "3", optional = true }
log = { version = "0.4", optional = true }
num-derive = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
rand = { version = "0.10", optional = true }
regex = { version = "1", optional = true }
tokio = { version = "1", optional = true }
uuid = { version = "1", optional = true }

[features]
battleye = ["dep:crc", "dep:log", "tokio/rt", "tokio/time", "tokio/sync"]
source = ["dep:bitflags", "dep:log", "dep:num-derive", "dep:num-traits", "dep:rand", "tokio/io-util", "tokio/net"]
dayz = ["battleye", "dep:uuid"]
minecraft = ["source", "dep:uuid"]
minecraft-java-edition = ["minecraft", "dep:regex"]
minecraft-bedrock-edition = ["minecraft"]
minecraft-education-edition = ["minecraft-bedrock-edition"]

[lints]
workspace = true