[package]
name = "rconclt"
description = "RCon CLI client"
license = "MIT"
repository = "https://github.com/conqp/rcon-rs"
categories = ["command-line-utilities"]
keywords = ["rcon", "client", "cli"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.11" }
log = "0.4"
rcon = { path = "../rcon", version = "0.3", features = ["battleye", "source"] }
rpassword = { version = "7" }
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints]
workspace = true